--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html lang="nl" data-theme="dark">
   <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="../vars.css">
-  <link rel="stylesheet" href="../theme.css">
-  <link rel="stylesheet" href="./styles.css">
-  <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.16.0/cdn/shoelace.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.16.0/cdn/themes/dark.css" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="../vars.css" />
+    <link rel="stylesheet" href="../theme.css" />
+    <link rel="stylesheet" href="./styles.css" />
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.16.0/cdn/shoelace.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.16.0/cdn/themes/dark.css" />
     <title>Dashboard Layouts</title>
   </head>
   <body>
@@ -42,14 +42,6 @@
         </section>
       </main>
     </div>
-    <script type="module">
-      // theme
-      const t = document.querySelector('#themeToggle');
-      const root = document.documentElement;
-      const prefers = matchMedia('(prefers-color-scheme: dark)').matches;
-      root.setAttribute('data-theme', prefers ? 'dark':'light');
-      t.checked = prefers;
-      t.addEventListener('sl-change', e => root.setAttribute('data-theme', e.target.checked ? 'dark':'light'));
-    </script>
+    <script type="module" src="../scripts/main.js"></script>
   </body>
 </html>
