--- a/main.css
+++ b/main.css
@@ -1,46 +1,11 @@
-@import "./vars.css";
-@import "./theme.css";
-
-html,
-body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  font-family: var(--font-base, Inter, system-ui, sans-serif);
-  font-size: calc(var(--text-base, 1rem) + 0px);
-  color: var(--text, #1f2937);
-  line-height: 1.5;
-  background: var(--bg, #fff);
-}
-
-/* Utility classes */
-.hidden {
-  display: none !important;
-}
-
-li, ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-a, span, p, article, div {
-  text-decoration: none;
-  color: inherit;
-  margin: 0;
-  padding: 0;
-}
-
-/* Headings */
-h1, h2, h3 {
-  margin: 0;
-  padding: 0;
-  line-height: 1.25;
-}
-
-h4, h5, h6 {
-  font-family: var(--font-body, Inter, system-ui, sans-serif);
-  margin: 0;
-  padding: 0;
-  line-height: 1.25;
-}
+@import "/packages/styles/vars.css";
+@import "/packages/styles/main.css";
+@import "/packages/styles/theme.css";
+@import "/packages/styles/ui.css";
+@import "/packages/styles/shoelace.css";
+@import "/packages/styles/layout/layout.css";
+@import "/packages/styles/layout/dashboard.css";
+@import "/packages/styles/layout/app.css";
+@import "/packages/styles/layout/admin.css";
+@import "/packages/styles/layout/views.css";
+@import "@fortawesome/fontawesome-free/css/all.min.css";
